# terraform-provider-fabric

./: .changie.yaml  .copywrite.hcl  .editorconfig  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yml  .semver.yaml  CHANGELOG.md  CLAUDE.md  CODING_GUIDELINES.md  CONTRIBUTING.md  DEVELOPER.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  Taskfile.yml  coverage.run.27593.out  go.mod  go.sum  lakehouse_test_func.go  main.go  main.tf  mkdocs.yml
.changes/: header.tpl.md  v0.1.0-beta.1.md  v0.1.0-beta.10.md  v0.1.0-beta.2.md  v0.1.0-beta.3.md  v0.1.0-beta.4.md  v0.1.0-beta.5.md  v0.1.0-beta.6.md  v0.1.0-beta.7.md  v0.1.0-beta.8.md  v0.1.0-beta.9.md  v0.1.0-rc.1.md  v0.1.0-rc.2.md  v1.0.0.md  v1.1.0.md  v1.10.0.md  v1.11.0.md  v1.2.0.md  v1.3.0.md  v1.4.0.md  v1.5.0.md  v1.6.0.md  v1.7.0.md  v1.8.0.md  v1.9.0.md  v1.9.1.md
.changes/unreleased/: added-20240918-172115.yaml  added-20240930-235244.yaml  added-20241001-174434.yaml  added-20241011-163624.yaml  added-20241219-121511.yaml  added-20241223-094847.yaml  added-20241223-094848.yaml  added-20241223-094849.yaml  added-20241230-120810.yaml  added-20241230-120926.yaml  added-20250116-152025.yaml  (+220 more)
.devcontainer/: README.md  devcontainer.env  devcontainer.json
.github/: AI_README.md  CODEOWNERS  COPILOT_ARCHITECTURE.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.roo/: mcp.json
docs/: .pages  index.md
examples/: README.md
templates/: index.md.tmpl
tools/: tools.go
tools/itemgen/MCP/: README.md  itemgen.md  pyproject.toml  server.py
tools/itemgen/MCP/src/tf_mcp/: __init__.py
(+2044 files in other folders)
